--- a/javascript/DOM/index.html
+++ b/javascript/DOM/index.html
@@ -79,6 +79,10 @@ C'est a dire, qu'avec le DOM, nous pouvons attrapper et manipuler chaque eveneme
 <button id="smallAllJaune">Retrecir tous les jaunes</button>
 <hr>
 <div class="jaune" id="aaron"></div>
+<hr>
+<div>
+  <img id="exoImage" src="a.jpg">
+</div>
 <script src="fichier.js"></script>
 <hr style="margin-top:1000px;">
 
