--- a/javascript/DOM/index.html
+++ b/javascript/DOM/index.html
@@ -51,7 +51,7 @@
 Le DOM (Document Object Model), est un objet Javascript qui represente tout le navigateur et les elements HTML qui le constitue.
 C'est a dire, qu'avec le DOM, nous pouvons attrapper et manipuler chaque evenement du navigateur (clic de souris, survol de souris, scroll, appuie sur touche de clavier etc..), chaque element HTML (<h1>, <div>, <input>, etc...) en Javascript.
 -->
-
+<!-- http://bit.ly/2gGoYXz pour telecharger le code source -->
 <!--
 3 endroits pour ecrire du JS :
 -->
