--- a/javascript/DOM/index.html
+++ b/javascript/DOM/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="fr">
 <head>
+  <!-- http://bit.ly/2gGoYXz pour telecharger le code source -->
   <meta charset="UTF-8">
   <title>Document Object Model</title>
   <style>
@@ -51,7 +52,6 @@
 Le DOM (Document Object Model), est un objet Javascript qui represente tout le navigateur et les elements HTML qui le constitue.
 C'est a dire, qu'avec le DOM, nous pouvons attrapper et manipuler chaque evenement du navigateur (clic de souris, survol de souris, scroll, appuie sur touche de clavier etc..), chaque element HTML (<h1>, <div>, <input>, etc...) en Javascript.
 -->
-<!-- http://bit.ly/2gGoYXz pour telecharger le code source -->
 <!--
 3 endroits pour ecrire du JS :
 -->
@@ -83,6 +83,17 @@ C'est a dire, qu'avec le DOM, nous pouvons attrapper et manipuler chaque eveneme
 <div>
   <img id="exoImage" src="a.jpg">
 </div>
+<button id="changerCourse">Remplacer le Fromage par du Riz</button>
+<ul>
+  <li>Lait</li>
+  <li>Jus d'orange</li>
+  <li>Oeufs</li>
+  <li>Fromage</li>
+  <li>Pommes</li>
+</ul>
+
+<a id="lienGoogle" href="http://google.fr">Lien vers Google</a>
+
 <script src="fichier.js"></script>
 <hr style="margin-top:1000px;">
 
