--- a/javascript/entrainement/index.html
+++ b/javascript/entrainement/index.html
@@ -2,6 +2,10 @@
 <html lang="fr">
 <head>
   <!-- http://bit.ly/2gGoYXz pour telecharger le code source -->
+  <!--
+  Infos utiles :
+  plugin sweetalert2
+  -->
   <meta charset="UTF-8">
   <title>Entrainement</title>
   <style>
